# iSpike

./: AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  InstallToSpikestream.bat  README  anglesOut.txt  cmake.bat  cmake.sh  logPolar.ppm  variables.txt
client/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  ispike-manual-2.0.doc  ispike-manual.doc
docs/website/: index.html  index.php
docs/website/css/: pagestyle.css  structure.css
docs/website/pages/: documentation.html  download.html  support.html  videos.html
include/SpikeAdapter/: Bitmap.hpp  ChannelController.hpp  Common.hpp  YarpInterface.hpp  YarpPortDetails.hpp
include/SpikeAdapter/Channel/: DummyInputChannel.hpp
include/SpikeAdapter/NeuronSim/: IzhikevichNeuronSim.hpp  NeuronSim.hpp
include/SpikeAdapter/Reader/: FileVisualReader.hpp  Reader.hpp  VisualReader.hpp  YarpAudioReader.hpp  YarpTextReader.hpp  YarpVisualReader.hpp
include/SpikeAdapter/VisualDataReducer/: LogpolarVisualDataReducer.hpp  VisualDataReducer.hpp
include/SpikeAdapter/VisualFilter/: DOGVisualFilter.hpp  VisualFilter.hpp
include/iSpike/: Bitmap.hpp  ChannelController.hpp  Common.hpp  Description.hpp  ISpikeException.hpp  ISpikeThread.hpp  Property.hpp  PropertyHolder.hpp  YarpConnection.hpp  YarpInterface.hpp  YarpPortDetails.hpp  iSpikeThread.hpp
include/iSpike/Channel/: Channel.hpp  DummyInputChannel.hpp  InputChannel.hpp  JointInputChannel.hpp  JointOutputChannel.hpp  OutputChannel.hpp  VisualInputChannel.hpp
include/iSpike/Channel/InputChannel/: InputChannel.hpp  InputChannelDescription.hpp  InputChannelFactory.hpp  JointInputChannel.hpp  VisualInputChannel.hpp
include/iSpike/Channel/OutputChannel/: JointOutputChannel.hpp  OutputChannel.hpp  OutputChannelDescription.hpp  OutputChannelFactory.hpp
include/iSpike/Log/: Log.hpp
include/iSpike/NeuronSim/: IzhikevichNeuronSim.hpp  NeuronSim.hpp
include/iSpike/Reader/: AngleReader.hpp  ConsoleAngleReader.hpp  FileAngleReader.hpp  FileVisualReader.hpp  Reader.hpp  ReaderDescription.hpp  ReaderFactory.hpp  VisualReader.hpp  YarpAngleReader.hpp  YarpAudioReader.hpp  YarpTextReader.hpp  YarpVisualReader.hpp
include/iSpike/VisualDataReducer/: LogPolarVisualDataReducer.hpp  LogpolarVisualDataReducer.hpp  VisualDataReducer.hpp
include/iSpike/VisualFilter/: DOGVisualFilter.hpp  MovementFilter.hpp  VisualFilter.hpp
include/iSpike/Writer/: AngleWriter.hpp  FileAngleWriter.hpp  Writer.hpp  WriterDescription.hpp  WriterFactory.hpp  YarpAngleWriter.hpp
scripts/: BuildRelease.bat  InstallToSpikestream.bat
src/: Bitmap.cpp  CMakeLists.txt  ChannelController.cpp  Common.cpp  Description.cpp  Property.cpp  PropertyHolder.cpp  YarpConnection.cpp  YarpInterface.cpp  YarpPortDetails.cpp  libraryinfo.h  version.cpp
src/Channel/: Channel.cpp  DummyInputChannel.cpp  InputChannel.cpp  JointInputChannel.cpp  JointOutputChannel.cpp  OutputChannel.cpp  VisualInputChannel.cpp
src/Channel/InputChannel/: InputChannel.cpp  InputChannelDescription.cpp  InputChannelFactory.cpp  JointInputChannel.cpp  VisualInputChannel.cpp
src/Channel/OutputChannel/: JointOutputChannel.cpp  OutputChannel.cpp  OutputChannelDescription.cpp  OutputChannelFactory.cpp
src/Log/: Log.cpp
src/NeuronSim/: IzhikevichNeuronSim.cpp
src/Reader/: ConsoleAngleReader.cpp  FileAngleReader.cpp  FileVisualReader.cpp  Reader.cpp  ReaderDescription.cpp  ReaderFactory.cpp  YarpAngleReader.cpp  YarpAudioReader.cpp  YarpTextReader.cpp  YarpVisualReader.cpp
src/VisualDataReducer/: LogPolarVisualDataReducer.cpp  LogpolarVisualDataReducer.cpp
src/VisualFilter/: DOGVisualFilter.cpp  MovementFilter.cpp
src/Writer/: FileAngleWriter.cpp  WriterDescription.cpp  WriterFactory.cpp  YarpAngleWriter.cpp
test/: CMakeLists.txt  ComponentPerformance.cpp  GraphSpikeConversion.cpp  MockAngleWriter.h  angleEncodeDecode.cpp  main.cpp  performance.cpp  sanity_check.cpp  test.h
tools/share/cmake/: FindUnitTestPlusPlus.cmake
