CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
PROJECT (iSpike)
SET (APPLICATION_NAME "iSpike")
SET (APPLICATION_CODENAME "${PROJECT_NAME}")
SET (APPLICATION_COPYRIGHT_YEARS "2011")
SET (APPLICATION_VERSION_MAJOR 2)
SET (APPLICATION_VERSION_MINOR 0)
SET (APPLICATION_VERSION_PATCH 0)
SET (APPLICATION_VERSION_TYPE SNAPSHOT)
SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET (APPLICATION_VENDOR_ID "Imperial")
SET (APPLICATION_VENDOR_NAME "Department of Computing, Imperial College, London")
SET (APPLICATION_VENDOR_URL "www.imperial.ac.uk")
SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")
SET (ISPIKE_INSTALL_DIRECTORY "ispike-${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}")

# Debugging Options
SET (CMAKE_VERBOSE_MAKEFILE 0) # Use 1 for debugging, 0 for release
SET (CMAKE_BUILD_TYPE "Release") 

# Project Output Paths
SET (ISPIKE_ROOT_DIR "${PROJECT_SOURCE_DIR}")

# Project Search Paths
LIST (APPEND CMAKE_PREFIX_PATH "${ISPIKE_ROOT_DIR}")
INCLUDE_DIRECTORIES("${ISPIKE_ROOT_DIR}/include")

# Configure information
CONFIGURE_FILE(${ISPIKE_ROOT_DIR}/libraryinfo.h.in.cmake ${ISPIKE_ROOT_DIR}/include/iSpike/libraryinfo.h)

# Add Build Targets
ADD_SUBDIRECTORY(src)

# Add Install Targets
INSTALL(DIRECTORY "${ISPIKE_ROOT_DIR}/include/" DESTINATION ${ISPIKE_INSTALL_DIRECTORY}/include)



