CMAKE_MINIMUM_REQUIRED (VERSION 2.6.2)
PROJECT (iSpike)
SET (APPLICATION_NAME "iSpike")
SET (APPLICATION_CODENAME "${PROJECT_NAME}")
SET (APPLICATION_COPYRIGHT_YEARS "2011")
SET (APPLICATION_VERSION_MAJOR 2)
SET (APPLICATION_VERSION_MINOR 1)
SET (APPLICATION_VERSION_PATCH 0)
SET (APPLICATION_VERSION_TYPE SNAPSHOT)
SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET (APPLICATION_VENDOR_ID "Imperial")
SET (APPLICATION_VENDOR_NAME "Department of Computing, Imperial College London")
SET (APPLICATION_VENDOR_URL "www.imperial.ac.uk")
SET (APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")

# Project Search Paths
LIST (APPEND CMAKE_PREFIX_PATH ${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/include)

# Configure information
CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/libraryinfo.h.in.cmake ${CMAKE_BINARY_DIR}/include/iSpike/libraryinfo.h)

# Add Build Targets
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(docs)

# Add Install Targets
INSTALL(FILES ${CMAKE_BINARY_DIR}/include/iSpike/libraryinfo.h DESTINATION include)
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include)

# Tests enabled/disabled
OPTION(ISPIKE_TEST_ENABLED "Build test code" OFF)
IF(ISPIKE_TEST_ENABLED)
	ADD_SUBDIRECTORY(test)
ENDIF(ISPIKE_TEST_ENABLED)

# Packaging
IF(NOT APPLE)
	SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
	SET(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README")
ENDIF(NOT APPLE)
SET(CPACK_PACKAGE_VERSION_MAJOR ${APPLICATION_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${APPLICATION_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${APPLICATION_VERSION_PATCH})

IF(WIN32)
	SET(CPACK_GENERATOR "NSIS")
ENDIF(WIN32)

IF(APPLE)
	SET(CPACK_GENERATOR "PackageMaker")
ENDIF(APPLE)

SET(CPACK_SOURCE_GENERATOR "TGZ")

# By default cpack grabs everything in the source tree. However, the local
# source tree may contain user-specific files which should not be included.
# A list of such files (or patterns) can be specified in the file
# CMake/cpack.ignore
IF(EXISTS ${CMAKE_SOURCE_DIR}/CMake/cpack.ignore)
	FILE(READ CMake/cpack.ignore USER_CPACK_SOURCE_IGNORE_FILES)
	SET(CPACK_SOURCE_IGNORE_FILES ${USER_CPACK_SOURCE_IGNORE_FILES} ${CPACK_SOURCE_IGNORE_FILES})
ENDIF(EXISTS ${CMAKE_SOURCE_DIR}/CMake/cpack.ignore)

SET(CPACK_SOURCE_IGNORE_FILES
		build
		docs/website
		".svn"
		ispike-manual-2.0.doc
		Lazdins11_iSpikeProjectReport.pdf
		LazdinsFidjelandGamez11_iSpike.pdf
	${CPACK_SOURCE_IGNORE_FILES})
MESSAGE(${CPACK_SOURCE_IGNORE_FILES})

INCLUDE(CPack)
