FILE (GLOB_RECURSE output_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
IF(WIN32)
    SET (output_LIBS ${Boost_LIBRARIES} ${Log4Cxx_LIBRARIES} ${UnitTestPlusPlus_LIBRARIES} ${UnitTestPlusPlus_LIBRARIES} ${PROJECT_NAME} "ws2_32")
ELSE()
    SET (output_LIBS ${Boost_LIBRARIES} ${Log4Cxx_LIBRARIES} ${UnitTestPlusPlus_LIBRARIES} ${UnitTestPlusPlus_LIBRARIES} ${PROJECT_NAME})
ENDIF()
SET (output_BIN manual-output-test)

IF (NOT CMAKE_CROSSCOMPILING)
    LINK_DIRECTORIES(${MAINFOLDER}/lib/${ConfigurationName})
    ADD_EXECUTABLE(${output_BIN} ${output_SRCS})
    TARGET_LINK_LIBRARIES(${output_BIN} ${output_LIBS})
ENDIF (NOT CMAKE_CROSSCOMPILING)
